the viewer/urlhandlermanager expects that the message (mMessage) it is passed is the root when doing index calculation  in urls. Simply passing the result of bodyAsMessage() does not cut it as the resulting pointer is a child in its tree. So, we copy the content tree making the encapsulated message the root node. props to thomas for figuring this out.

BUG: 237174

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1131282